--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,5 @@
-body {
-    background: white;
-}
-
 table {
-    margin: 0 auto;
+    margin: auto;
 }
 
 .cell {
@@ -19,43 +15,33 @@ table {
 .color-2 {
     background-color: yellow;
 }
-
 .color-4 {
     background-color: orange;
 }
-
 .color-8 {
     background-color: darkorange;
 }
-
 .color-16 {
     background-color: coral;
 }
-
 .color-32 {
     background-color: orangered;
 }
-
 .color-64 {
     background-color: red;
 }
-
 .color-128 {
     background-color: darkred;
 }
-
 .color-256 {
     background-color: brown;
 }
-
 .color-512 {
     background-color: firebrick;
 }
-
 .color-1024 {
     background-color: saddlebrown;
 }
-
 .color-2048 {
     background-color: purple;
 }
