--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,27 @@
+html{
+    height: 100%;
+    background-image: linear-gradient(peachpuff, papayawhip);
+}
+
 body{
     font-family: "Arial Black";
     font-size: 20px;
 }
 
+.header{
+    font-family: "JetBrains Mono ExtraBold";
+    padding-bottom: 50px;
+    text-align: center;
+}
+
 table, th, td {
     margin: auto;
-    border: 1px solid black;
     border-spacing: 5px;
     border-collapse: separate;
+}
+
+table {
+    border: 3px solid lightgrey;
 }
 
 td {
@@ -15,6 +29,7 @@ td {
     width: 100px;
     height: 100px;
     text-align: center;
+    border-radius: 7px;
 }
 
 .movements {
