--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,13 @@ body{
     text-align: center;
 }
 
+
+#controls {
+    font-family: "JetBrains Mono ExtraBold";
+    padding-top: 20px;
+    text-align: center;
+}
+
 table, th, td {
     margin: auto;
     border-spacing: 5px;
